dumnezeu cu mila

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -38,10 +38,10 @@
     <div class="containerb">
       <div class="sebipoza"><img class="logo" src="images/sebip.jpg" width="100%" height="100%"></div>
       <div class="sebitext"></div>
-      <div class="mucpoza"><img class="logo" src="images/placeholder.png" width="100%" height="100%"></div>
-      <div class="muctext"></div>
+      <div class="mucpoza"><img class="logo" src="images/mucp.jpg" width="100%" height="100%"></div>
+      <div class="muctext"><p2>Hey, my name is Matei (english version Matthew), I am 17 years old currently studying at Colegiul National de Informatica Tudor Vianu. I love theatre, traveling, reading and cycling . I’ve always wanted to take part in a group project that aims to change the world for the better, at least slightly, and I feel like Nos Natura is the perfect fit for it.</p2></div>
       <div class="cezarpoza"><img class="logo" src="images/cezarp.jpg" width="100%" height="100%"></div>
-      <div class="cezartext"></div>
+      <div class="cezartext"><p2>I am Băluță Cezar, a 17 years old student at the National College of Computer Science "Tudor Vianu". I am passionate about technology and I am looking forward to becoming a software engineer. I am also a nature lover and it hurts to see that the authorities are not interested in reforesting or planting trees in the urban areas. That's why I have decided to be part of the NosNatura project.</p2></div>
       <div class="calinpoza"><img class="logo" src="images/placeholder.png" width="100%" height="100%"></div>
       <div class="calintext">
         <p2>Hi, my name is Avramoniu Calin. I live in Bucharest and I am passionate about sports, coding and almost
