--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@ li,a,button{
     font-family: 'Hind', sans-serif;
     font-weight:500;
     font-size:16px;
-    color: black;
+    color: #ecd2b1;
     text-decoration:none;
 }
 header{
@@ -16,9 +16,8 @@ header{
     justify-content: flex-end;
     align-items:center;
     padding:10px 8%;
-    background: linear-gradient(0deg,#CDEAF7,#94d3f5);
+    background: linear-gradient(0deg,#E8DED1,#ecd2b1);
 }
-
 .logo {
     cursor: pointer;
     margin-right: auto;
@@ -35,11 +34,11 @@ header{
     transition: all 0.3s ease 0s;
 }
 .nav_links li a:hover{
-    color:rgb(8, 208, 235)
+    color:#3D2314;
 }
 button{
     padding: 9px 25px;
-    background-color: rgb(3, 171, 173);
+    background-color: #3D2314;
     border: none;
     border-radius: 50px;
     cursor:pointer;
@@ -51,7 +50,7 @@ button:hover{
 }
 button2{
     padding: 9px 25px;
-    background-color: rgb(4, 187, 190);
+    background-color: #3D2314;
     border: none;
     border-radius: 50px;
     cursor:pointer;
@@ -62,7 +61,7 @@ button2:hover{
 }
 button3{
     padding: 9px 25px;
-    background-color: rgb(83, 157, 158);
+    background-color: #3D2314;
     border: none;
     border-radius: 50px;
     cursor:pointer;
@@ -85,8 +84,8 @@ body{
     overflow: hidden;
     width:100%;
     height:300vh;
-background: linear-gradient(180deg,#CDEAF7,#3099d1);
-background-size: cover;
+background: linear-gradient(180deg,#E8DED1,#ecd2b1);
+background-size:cover;
 }
 .container1{
     scroll-snap-type: y mandatory;
@@ -107,13 +106,17 @@ justify-content:center;
 text-align:center;
 width:100%;
 height:45vh;
-font-family: 'Bebas Neue', cursive;
+font-family: 'PT Sans Caption', sans-serif;
 }
 section h1{
-font-size:4rem;
+font-size:7rem;
+color:#3D2314;
+text-shadow: #b86a3d 3px 5px 2px;
 }
 section p{
-    font-size:2.2rem;
+    font-size:4rem;
+    color:#3D2314;
+
   }
   .div2{
       float:left;
@@ -198,5 +201,5 @@ section p2{
 }
 .spatiu{
     width:100%;
-    height:20vh;
+    height:23vh;
 }
