--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,6 @@
   <meta name="description" content="">
   <link rel="stylesheet" href="css/astyles.css">
 </head>
-
 <body>
   <header>
     <nav>
@@ -37,7 +36,8 @@
   <div>
     <div class="containerb">
       <div class="sebipoza"><img class="logo" src="images/sebip.jpg" width="100%" height="100%"></div>
-      <div class="sebitext"></div>
+      <div class="sebitext"><p2>Hello, my name is Sebastian. I was always fascinated by technology. I began learning about it at a young age, with Arduino IDE and C++.
+        I like sports aswell, at the moment I hold a Kukkiwon 1st poom Black-Belt certificate in Taekwondo.With this project I learnt a lot about Frontend development and teamwork. I'm very social and I love meeting new people. I look forward to learning more about JavaScript and AI in the near future.</p2></div>
       <div class="mucpoza"><img class="logo" src="images/mucp.jpg" width="100%" height="100%"></div>
       <div class="muctext"><p2>Hey, my name is Matei (english version Matthew), I am 17 years old currently studying at Colegiul National de Informatica Tudor Vianu. I love theatre, traveling, reading and cycling . I’ve always wanted to take part in a group project that aims to change the world for the better, at least slightly, and I feel like Nos Natura is the perfect fit for it.</p2></div>
       <div class="cezarpoza"><img class="logo" src="images/cezarp.jpg" width="100%" height="100%"></div>
@@ -50,7 +50,7 @@
       </div>
       <div class="ianipoza"><img class="logo" src="images/ianip.jpg" width="100%" height="100%"></div>
       <div class="ianitext">
-        <p2>My name is Iani and I am one of 9 co-founders of Nos Natura. I’d like to think of myself as innovative and
+        <p2>My name is Iani and I am one of 10 co-founders of Nos Natura. I’d like to think of myself as innovative and
           creative, even though, in truth, I tend to lean towards the exact sciences and sports. I helped found this
           non-profit in order to raise awareness for a great cause that, unfortunately, hasn’t been given nearly enough
           attention during recent years.</p2>
