--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +15,7 @@
   <meta name="description" content="">
   <link rel="stylesheet" href="css/astyles.css">
 </head>
+
 <body>
   <header>
     <nav>
@@ -34,20 +36,56 @@
     <p>-List of NosNatura Founders-</p>
   </div>
   <div>
-    <div class="containerb">
+    <div id="container_sebi">
       <div class="sebipoza"><img class="logo" src="images/sebip.jpg" width="100%" height="100%"></div>
-      <div class="sebitext"><p2>Hello, my name is Sebastian. I was always fascinated by technology. I began learning about it at a young age, with Arduino IDE and C++.
-        I like sports aswell, at the moment I hold a Kukkiwon 1st poom Black-Belt certificate in Taekwondo.With this project I learnt a lot about Frontend development and teamwork. I'm very social and I love meeting new people. I look forward to learning more about JavaScript and AI in the near future.</p2></div>
+      <div class="sebitext">
+        <p2>Hello, my name is Sebastian. I was always fascinated by technology. I began learning about it at a young
+          age, with Arduino IDE and C++.
+          I like sports aswell, at the moment I hold a Kukkiwon 1st poom Black-Belt certificate in Taekwondo.With this
+          project I learnt a lot about Frontend development and teamwork. I'm very social and I love meeting new
+          people.
+          I look forward to learning more about JavaScript and AI in the near future.</p2>
+      </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_muc">
       <div class="mucpoza"><img class="logo" src="images/mucp.jpg" width="100%" height="100%"></div>
-      <div class="muctext"><p2>Hey, my name is Matei (english version Matthew), I am 17 years old currently studying at Colegiul National de Informatica Tudor Vianu. I love theatre, traveling, reading and cycling . I’ve always wanted to take part in a group project that aims to change the world for the better, at least slightly, and I feel like Nos Natura is the perfect fit for it.</p2></div>
+      <div class="muctext">
+        <p2>Hey, my name is Matei (english version Matthew), I am 17 years old currently studying at Colegiul National
+          de Informatica Tudor Vianu. I love theatre, traveling, reading and cycling . I’ve always wanted to take part
+          in a group project that aims to change the world for the better, at least slightly, and I feel like Nos Natura
+          is the perfect fit for it.</p2>
+      </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_cezar">
       <div class="cezarpoza"><img class="logo" src="images/cezarp.jpg" width="100%" height="100%"></div>
-      <div class="cezartext"><p2>I am Băluță Cezar, a 17 years old student at the National College of Computer Science "Tudor Vianu". I am passionate about technology and I am looking forward to becoming a software engineer. I am also a nature lover and it hurts to see that the authorities are not interested in reforesting or planting trees in the urban areas. That's why I have decided to be part of the NosNatura project.</p2></div>
+      <div class="cezartext">
+        <p2>I am Băluță Cezar, a 17 years old student at the National College of Computer Science "Tudor Vianu". I am
+          passionate about technology and I am looking forward to becoming a software engineer. I am also a nature lover
+          and it hurts to see that the authorities are not interested in reforesting or planting trees in the urban
+          areas. That's why I have decided to be part of the NosNatura project.</p2>
+      </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_calin">
       <div class="calinpoza"><img class="logo" src="images/placeholder.png" width="100%" height="100%"></div>
       <div class="calintext">
         <p2>Hi, my name is Avramoniu Calin. I live in Bucharest and I am passionate about sports, coding and almost
           anything business related. I hope I will become a successful entrepreneur in the future, but you never know.
         </p2>
       </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_iani">
       <div class="ianipoza"><img class="logo" src="images/ianip.jpg" width="100%" height="100%"></div>
       <div class="ianitext">
         <p2>My name is Iani and I am one of 10 co-founders of Nos Natura. I’d like to think of myself as innovative and
@@ -55,22 +93,42 @@
           non-profit in order to raise awareness for a great cause that, unfortunately, hasn’t been given nearly enough
           attention during recent years.</p2>
       </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_adi">
       <div class="adipoza"><img class="logo" src="images/adip.jpg" width="100%" height="100%"></div>
       <div class="aditext">
         <p2>My name is Adrian and I am a tenacious, kind and emphatic teenager, who always tries to be a better version
           of himself. I love computer science and I also like leaving my own comfort zone to improve my self confidence.
         </p2>
       </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_sala">
       <div class="salapoza"><img class="logo" src="images/salap.jpg" width="100%" height="100%"></div>
       <div class="salatext">
         <p2>My name is Andrei. I am 16 years old and i am a student at National College of Informatics Tudor Vianu. In
-          my free time I like playing video games and listen to music
+          my free time I like playing video games and listen to music.
       </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_barbu">
       <div class="barbupoza"><img class="logo" src="images/placeholder.png" width="100%" height="100%"></div>
       <div class="barbutext">
         <p2>My name is Matei and I am an enthusiastic teen, working hard for his dreams. I am also passionate about
           reading, music and I am a cinephile. I love social interaction and I offer to help whenever needed.</p2>
       </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_vlad">
       <div class="vladpoza"><img class="logo" src="images/placeholder.png" width="100%" height="100%"></div>
       <div class="vladtext">
         <p2>Hi, My name is Vlad and i'm one of the co-founders of NosNaturas , an student passionate about computer
@@ -78,6 +136,11 @@
           indifferent about the nature pollution and not stepping up.
           I am dedicated to this project and I surely think I could help making a difference here.</p2>
       </div>
+    </div>
+
+    <hr class="rounded">
+
+    <div id="container_alin">
       <div class="alinpoza"><img class="logo" src="images/alinp.jpg" width="100%" height="100%"></div>
       <div class="Alintext">
         <p2>My name is Alin Chirila, i'm 16 years old and currently i'm a student at George Calinescu Highschool.In my
