--- a/public/css/astyles.css
+++ b/public/css/astyles.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+body {
   background-color: #e8ded1;
 }
 html {
@@ -16,63 +18,7 @@ button {
   color: #dadada;
   text-decoration: none;
 }
-header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 15px 8%;
-}
-.logo {
-  cursor: pointer;
-  margin-right: auto;
-}
 
-.nav_links {
-  list-style: none;
-}
-.nav_links li {
-  display: inline-block;
-  padding: 0px 10px;
-}
-.nav_links li a {
-  transition: all 0.3s ease 0s;
-}
-.nav_links li a:hover {
-  color: rgb(0, 0, 0);
-}
-button4 {
-  padding: 9px 25px;
-  background-color: #3d2314;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-}
-button4:hover {
-  background-color: rgba(0, 136, 139, 0);
-}
-button2 {
-  padding: 9px 25px;
-  background-color: #3d2314;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-}
-button2:hover {
-  background-color: rgba(0, 136, 139, 0);
-}
-button3 {
-  padding: 9px 25px;
-  background-color: #3d2314;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-}
-button3:hover {
-  background-color: rgba(0, 136, 139, 0);
-}
 body {
   background-size: cover;
   background-repeat: no-repeat;
