--- a/views/harta.ejs
+++ b/views/harta.ejs
@@ -10,24 +10,12 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul class="nav_links">
-        <li><a class="cta" href="/">
-            <button3>Home</button>
-          </a></li>
-        <li><a class="cta" href="/map">
-            <button4>Map</button>
-          </a></li>
-        <li><a class="cta" href="/about">
-            <button2>About Us</button>
-          </a></li>
-      </ul>
-    </nav>
-  </header>
-  <div style="height:100%; width:100%; display:inline-block; overflow:hidden;">
-    <iframe class="custom-google-map" style="position:relative; border:none;"
-      src="https://www.google.com/maps/d/u/0/embed?mid=10-fXpCN26lEYwBMpw7vs5Bvj-GJYm4oG" width=100%
-      height=1000vh></iframe>
-  </div>
+
+  <%- include("partials/header") -%>
+
+    <div style="  width:100%; position: absolute; bottom: 55px; display:inline-block; z-index: -1;">
+      <iframe class="custom-google-map" style="position: absolute; border:none;"
+        src="https://www.google.com/maps/d/u/0/embed?mid=10-fXpCN26lEYwBMpw7vs5Bvj-GJYm4oG" width=100%
+        height=1000vh></iframe>
+    </div>
 </body>
