--- a/views/about.ejs
+++ b/views/about.ejs
@@ -137,8 +137,8 @@
       <div id="container_alin">
         <div class="alinpoza"><img class="logo" src="images/alinp.jpg" width="100%" height="100%"></div>
         <div class="Alintext">
-          <p2>My name is Alin Chirila, i'm 16 years old and currently i'm a student at George Calinescu Highschool.In my
-            free time i like to play video games, play ping pong, draw and listen to music. i like working in groups
+          <p2>My name is Alin Chirila, I'm 16 years old and currently I'm a student at George Calinescu Highschool.In my
+            free time I like to play video games, play ping pong, draw and listen to music. I like working in groups
             because it's the best way to socialize and have fun.</p2>
         </div>
       </div>
