--- a/views/about.ejs
+++ b/views/about.ejs
@@ -25,7 +25,7 @@
     </div>
     <div>
       <div id="container_sebi">
-        <div class="sebipoza"><img class="logo" src="images/sebip.jpg" width="100%" height="100%"></div>
+        <img class="logo sebipoza" src="images/sebip_2.jpg" width="100%">
         <div class="sebitext">
           <p2>Hello, my name is Sebastian. I was always fascinated by technology. I began learning about it at a young
             age, with Arduino IDE and C++.
@@ -39,7 +39,7 @@
       <hr class="rounded">
 
       <div id="container_muc">
-        <div class="mucpoza"><img class="logo" src="images/mucp.jpg" width="100%" height="100%"></div>
+        <img class="logo mucpoza" src="images/mucp_2.jpg" width="100%">
         <div class="muctext">
           <p2>Hey, my name is Matei (english version Matthew), I am 17 years old currently studying at Colegiul National
             de Informatica Tudor Vianu. I love theatre, traveling, reading and cycling . I’ve always wanted to take part
@@ -52,7 +52,7 @@
       <hr class="rounded">
 
       <div id="container_cezar">
-        <div class="cezarpoza"><img class="logo" src="images/cezarp.jpg" width="100%" height="100%"></div>
+        <img class="logo cezarpoza" src="images/cezarp_2.jpg" width="100%">
         <div class="cezartext">
           <p2>I am Băluță Cezar, a 17 years old student at the National College of Computer Science "Tudor Vianu". I am
             passionate about technology and I am looking forward to becoming a software engineer. I am also a nature
@@ -65,10 +65,10 @@
       <hr class="rounded">
 
       <div id="container_calin">
-        <div class="calinpoza"><img class="logo" src="images/placeholder.png" width="100%" height="100%"></div>
+        <img class="logo calinpoza" src="images/calinp.jpg" width="100%">
         <div class="calintext">
           <p2>Hi, my name is Avramoniu Calin. I live in Bucharest and I am passionate about sports, coding and almost
-            anything business related. I hope I will become a successful entrepreneur in the future, but you never know.
+            anything business related. I hope I will become a successful entrepreneur in the future.
           </p2>
         </div>
       </div>
@@ -76,7 +76,8 @@
       <hr class="rounded">
 
       <div id="container_iani">
-        <div class="ianipoza"><img class="logo" src="images/ianip.jpg" width="100%" height="100%"></div>
+        <img class="logo ianipoza" src="images/ianip_2.jpg" width="100%" height="100%">
+
         <div class="ianitext">
           <p2>My name is Iani and I am one of 10 co-founders of Nos Natura. I’d like to think of myself as innovative
             and
@@ -89,8 +90,19 @@
 
       <hr class="rounded">
 
+
+      <div id="container_sala">
+        <img class="logo salapoza" src="images/salap_2.jpg" width="100%" height="100%">
+        <div class="salatext">
+          <p2>My name is Andrei. I am 16 years old and i am a student at National College of Informatics Tudor Vianu. In
+            my free time I like to play video games and listen to music.
+        </div>
+      </div>
+
+      <hr class="rounded">
+
       <div id="container_adi">
-        <div class="adipoza"><img class="logo" src="images/adip.jpg" width="100%" height="100%"></div>
+        <img class="logo adipoza" src="images/adip_2.jpg" width="100%">
         <div class="aditext">
           <p2>My name is Adrian and I am a tenacious, kind and emphatic teenager, who always tries to be a better
             version
@@ -102,19 +114,9 @@
 
       <hr class="rounded">
 
-      <div id="container_sala">
-        <div class="salapoza"><img class="logo" src="images/salap.jpg" width="100%" height="100%"></div>
-        <div class="salatext">
-          <p2>My name is Andrei. I am 16 years old and i am a student at National College of Informatics Tudor Vianu. In
-            my free time I like playing video games and listen to music.
-        </div>
-      </div>
-
-      <hr class="rounded">
-
       <div id="container_barbu">
-        <div class="barbupoza"><img class="logo" src="images/placeholder.png" width="100%" height="100%"></div>
-        <div class="barbutext">
+        <img class="logo barbupoza" src="images/placeholder.png" width="100%">
+        <div class=" barbutext">
           <p2>My name is Matei and I am an enthusiastic teen, working hard for his dreams. I am also passionate about
             reading, music and I am a cinephile. I love social interaction and I offer to help whenever needed.</p2>
         </div>
@@ -123,7 +125,7 @@
       <hr class="rounded">
 
       <div id="container_vlad">
-        <div class="vladpoza"><img class="logo" src="images/placeholder.png" width="100%" height="100%"></div>
+        <img class="logo vladpoza" src="images/placeholder.png" width="100%">
         <div class="vladtext">
           <p2>Hi, My name is Vlad and i'm one of the co-founders of NosNaturas , an student passionate about computer
             science who wants to help the nature in any way possible. It's hard to see how the authorities are so
@@ -135,7 +137,7 @@
       <hr class="rounded">
 
       <div id="container_alin">
-        <div class="alinpoza"><img class="logo" src="images/alinp.jpg" width="100%" height="100%"></div>
+        <img class="logo alinpoza" src="images/alinp_2.jpg" width="100%">
         <div class="Alintext">
           <p2>My name is Alin Chirila, I'm 16 years old and currently I'm a student at George Calinescu Highschool.In my
             free time I like to play video games, play ping pong, draw and listen to music. I like working in groups
@@ -149,4 +151,5 @@
         header.classList.toggle(sticky, window.scrollY > 0);
       })
     </script>
+</body>
 </body>
