--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,9 +25,10 @@
       <div class="grid1">
         <section id="first">
           <h1>Nos Natura Project</h1>
-          <p>for a greener world</p>
+          <p id="greener"> for a greener world</p>
           <p>Est.2021</p>
         </section>
+
         <div2 class="grid2">
           <?xml version="1.0" encoding="utf-8"?>
           <%- include("partials/svg") -%>
