--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <section id="first">
           <h1>Nos Natura Project</h1>
           <p id="greener"> for a greener world</p>
-          <p>Est.2021</p>
+          <p style="  letter-spacing: 3px ; ">Est. 2021</p>
         </section>
 
         <div2 class="grid2">
