--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,9 +15,9 @@
   <meta name="description" content="">
   <link rel="stylesheet" href="css/astyles.css">
 </head>
-
+<div class="snapaux">
+  <div class="snapstart">
 <body>
-
   <%- include("partials/header") -%>
 
     <div class="title">
@@ -153,3 +153,5 @@
     </script>
 </body>
 </body>
+  </div>
+  </div>
